# NaoMarkTracker

./: .gitignore  README.md  ember_robot_interfesz.tex  extended_tracker.crg
trackermodule/: CMakeLists.txt  landmarktracker.cpp  landmarktracker.h  main.cpp  myvector.h  qiproject.xml
